# backend/docs/swagger.json
@@ -3800,6 +3800,48 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Create stock",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create stock",
+                "operationId": "create-stock",
+                "parameters": [
+                    {
+                        "description": "Stock entity",
+                        "name": "stock",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Stock"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ent.Stock"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
             }
         },
         "/stocks/{id}": {
@@ -3834,55 +3876,6 @@
                     },
                     "404": {
                         "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "update stock by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Update a stock entity by ID",
-                "operationId": "update-stock",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Stock ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Stock entity",
-                        "name": "stock",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/ent.Stock"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/ent.Stock"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/gin.H"
                         }
@@ -4479,6 +4472,32 @@
                 },
                 "salarys": {
                     "type": "number"
+                }
+            }
+        },
+        "controllers.Stock": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "employeeID": {
+                    "type": "integer"
+                },
+                "priceproduct": {
+                    "type": "string"
+                },
+                "productID": {
+                    "type": "integer"
+                },
+                "time": {
+                    "type": "string"
+                },
+                "typeproductID": {
+                    "type": "integer"
+                },
+                "zoneID": {
+                    "type": "integer"
                 }
             }
         },
